# unitedav

./: .gitignore  CLAUDE.md  NOTICE  README.md  flake.nix
.github/workflows/: deploy.yml
docs/: architecture.md  licensing.md  testing.md
native/: CMakeLists.txt
native/include/: unitedav.h  unitedav_gpu.h  unitedav_send.h
native/src/: player.cpp  player.hpp  uav_api.cpp
native/src/decode/: decoder.cpp  decoder.hpp
native/src/gpu/: README.md  d3d11_convert.cpp  d3d11_convert.hpp  egl_vaapi.cpp  egl_vaapi.hpp  gpu_backend.hpp  hwaccel.cpp  hwaccel.hpp  metal_convert.hpp  metal_convert.mm  unity_render.cpp  vk_convert.cpp  vk_convert.hpp  vk_nv12_rgba.comp
native/src/send/: sender.cpp  sender.hpp  uav_send_api.cpp
native/tests/: README.md
native/tests/fuzz/: README.md  fuzz_decode_url.cpp  fuzz_open.cpp  fuzz_send_config.cpp  fuzz_url.cpp  gen-corpus.sh
native/tests/oracle/: README.md  oracle_metrics.cpp  oracle_metrics.hpp  oracle_metrics_test.cpp  oracle_ref.cpp  oracle_ref.hpp  run_oracle.cmake  uav_oracle.cpp
native/tests/unit/: _uav_tests_main.cpp  test_audio_ring.cpp  test_codec_open.cpp  test_controls_info.cpp  test_lifecycle.cpp  test_misuse.cpp  test_negative.cpp  test_netfault.cpp  test_scaffold.cpp  test_send_api.cpp  test_video_pool.cpp  uav_doctest.h
native/tools/: tsan.supp  uav_d3d11_probe.cpp  uav_gpu_probe.cpp  uav_metal_probe.cpp  uav_probe.cpp  uav_send_probe.cpp  uav_vk_probe.cpp
tests/: run-matrix.sh  run-sangate.sh  run-sanitizers.sh
tests/media/: ATTRIBUTION.md  fetch-cc.sh  gen.sh
tests/streaming/: launch.sh  mediamtx.yml  netfault.sh  obs-e2e.sh  obs-unity-e2e.sh
tests/streaming/obs/config-template/obs-studio/: global.ini
tests/streaming/obs/config-template/obs-studio/basic/profiles/UnitedAV/: basic.ini  service.json
tests/streaming/obs/config-template/obs-studio/basic/scenes/: UnitedAV.json
tests/streaming/obs/config-template/obs-studio/plugin_config/obs-websocket/: config.json
tests/unity/: .gitignore  README.md  _report-run.sh  build-on-mac.sh  build-showcase-on-mac.sh  common.sh  push-windows.sh  run-linux.sh  run-mac.sh  run-windows.ps1
tests/unity/Assets/: .gitkeep
tests/unity/ProjectSettings/: EditorSettings.asset  ProjectSettings.asset
tests/web/: README.md  av_io_test.html  index.html  record-demo.sh  run-av-io.sh  run-webgl.sh  run-webgpu.sh  serve.sh  web_player.html  webgl_probe.html  webgpu_diag.html  webgpu_probe.html  webgpu_showcase.html
unity/: .npmignore  COMPILE_CHECK.md
unity/Runtime/Plugins/WebGL/: UnitedAV.jslib
unity/Samples~/BasicPlayback/: UnitedAV.Samples.BasicPlayback.asmdef  VideoQuadSample.cs
unity/Samples~/EndToEnd/: BatteryResult.cs  EndToEnd.unity  IntegrationBattery.cs  MediaPlayerDisplay.cs  README.md  UnitedAV.Samples.EndToEnd.asmdef
unity/Samples~/Showcase/: OrbitCamera.cs  README.md  ShowcaseCapture.cs  ShowcaseController.cs  UnitedAV.Samples.Showcase.asmdef
unity/Samples~/Showcase/Editor/: BuildShowcase.cs  UnitedAV.Samples.Showcase.Editor.asmdef
unity/Tests/EditMode/: ApiSurfaceTests.cs  ControlsInfoTests.cs  LifecycleTests.cs  UnitedAV.Tests.EditMode.asmdef
unity/Tests/PlayMode/: ObsLiveStreamTests.cs  PixelReadbackTests.cs  PlaybackTests.cs  UnitedAV.Tests.PlayMode.asmdef  UpstreamLoopbackTests.cs
